<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".home">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="255dp"
        android:background="@drawable/firstshape"
        android:alpha="0.60"
        >

    </View>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/accountImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="129dp"
        app:shapeAppearanceOverlay="@style/curved"
        android:padding="2dp"
        android:layout_marginTop="80dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_baseline_account_circle_24"
        app:strokeColor="#3D70D9"
        app:strokeWidth="5dp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profilepicedit"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="160dp"
        android:layout_marginStart="270dp"
        app:srcCompat="@drawable/ic_baseline_edit_24"


        />

    <androidx.cardview.widget.CardView
        android:id="@+id/hgh"
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:layout_marginTop="220dp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginBottom="20dp"
        android:padding="5dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="14dp" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello"
                android:layout_marginEnd="8dp"
                android:textSize="22sp"
                />
            <TextView
                android:id="@+id/name3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:hint="Name"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="24dp"

        android:columnCount="2"

        android:rowCount="3">


    <androidx.cardview.widget.CardView
        android:id="@+id/Registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_margin="12dp"
        android:padding="15dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="14dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/registration" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/registration"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/baclog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_margin="12dp"
        android:padding="15dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="14dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/backlog" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/backlogs"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/rms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_margin="12dp"
        android:padding="15dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="14dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/complain" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/complain"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_margin="12dp"
        android:padding="15dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="14dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/satisfaction" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/feedback"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>
    </GridLayout>

</FrameLayout>